kustomize/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-microservice-api
  namespace: default
  labels:
    app: demo-microservice-api
  annotations:
    argocd-image-updater.argoproj.io/image-list: api=ghcr.io/h3xkatana/k8s-microservices-demo-api
    argocd-image-updater.argoproj.io/api.update-strategy: digest
    argocd-image-updater.argoproj.io/api.allow-tags: regexp:^main-.*$
    argocd-image-updater.argoproj.io/api.write-back-method: git
    argocd-image-updater.argoproj.io/write-back-target: kustomization


spec:
  selector:
    matchLabels:
      app: demo-microservice-api
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-microservice-api
    spec:
      containers:
      - name: demo-microservice-api
        image: ghcr.io/h3xkatana/k8s-microservices-demo-api:main-6dfe6c7
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 100m
            memory: 200Mi

        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 3000
          name: demo-api-port
      restartPolicy: Always
